--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3"
+    "morgan": "^1.10.1",
+    "pg": "^8.11.3",
+    "redis": "^5.8.3",
+    "winston": "^3.18.3"
   }
 }
