--- a/k8s/backend/backend-service.yaml
+++ b/k8s/backend/backend-service.yaml
@@ -2,11 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ollamaverse-backend-service
+  namespace: aiops
 spec:
   type: ClusterIP
   selector:
     app: ollamaverse-backend
   ports:
-    - port: 5000
+    - name: http
+      port: 5000
       targetPort: 5000
-
