--- a/k8s/frontend/frontend-deployment.yaml
+++ b/k8s/frontend/frontend-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ollamaverse-frontend
+  namespace: aiops
 spec:
   replicas: 2
   selector:
@@ -14,7 +15,7 @@ spec:
     spec:
       containers:
         - name: ollamaverse-frontend
-          image: 976193257685.dkr.ecr.ap-south-1.amazonaws.com/ollamaverse-frontend:1.0
+          image: 976193257685.dkr.ecr.ap-south-1.amazonaws.com/ollamaverse-frontend:1.1
           ports:
             - containerPort: 80
 
