--- a/k8s/python/py-service.yaml
+++ b/k8s/python/py-service.yaml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ollamaverse-py-service
+  namespace: aiops
+  labels:
+    app: ollamaverse-py-backend
 spec:
   type: ClusterIP
   selector:
@@ -9,4 +12,3 @@ spec:
   ports:
     - port: 5001
       targetPort: 5001
-
