--- a/k8s/backend/backend-deployment.yaml
+++ b/k8s/backend/backend-deployment.yaml
@@ -15,18 +15,22 @@ spec:
     spec:
       containers:
         - name: ollamaverse-backend
-          image: 976193257685.dkr.ecr.ap-south-1.amazonaws.com/ollamaverse-backend:1.9
+          image: 976193257685.dkr.ecr.ap-south-1.amazonaws.com/ollamaverse-backend:1.19
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 5000
           env:
             - name: PORT
               value: "5000"
             - name: DATABASE_URL
-              value: "postgresql://neondb_owner:npg_txel7TsYDRw4@ep-restless-wind-a1n19pli-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require"
+              value: "mongodb://mongouser:mongopass@mongodb-service:27017/mydatabase?authSource=admin"
             - name: REDIS_URL
               value: "redis://redis-service:6379"
             - name: JWT_SECRET
-              value: "mySuperSecretKey"
+              valueFrom:
+                secretKeyRef:
+                  name: backend-secret
+                  key: jwt-secret
           resources:
             requests:
               cpu: "200m"
@@ -34,3 +38,19 @@ spec:
             limits:
               cpu: "500m"
               memory: "512Mi"
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 5000
+            initialDelaySeconds: 10
+            periodSeconds: 15
+            timeoutSeconds: 5
+            failureThreshold: 3
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 5000
+            initialDelaySeconds: 30
+            periodSeconds: 20
+            timeoutSeconds: 5
+            failureThreshold: 5
