feat: Enhance CORS configuration, update environment variables, and streamline Kubernetes manifests for improved deployment

--- a/ApplicationCode/python/.env.example
+++ b/ApplicationCode/python/.env.example
@@ -1,9 +1,9 @@
 # Python Backend Configuration
 PORT=8000
-OLLAMA_URL=http://localhost:11434
+OLLAMA_URL=http://ollama-smollm2:11434
 JWT_SECRET=mySuperSecretKey
 
 # Available models mapping
 # Format: frontend_name=ollama_model_name
-SMOLLM2_MODEL=smollm2:135m-instruct-q8_0
-TINYLLAMA_MODEL=tinyllama:latest
+OLLAMA_SMOLLM2_URL=http://ollama-smollm2:11434
+OLLAMA_TINYLLAMA_URL=http://ollama-tinyllama:11434
