--- a/K8S-Manifests/backend/backend-deployment.yaml
+++ b/K8S-Manifests/backend/backend-deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ollamaverse-backend
   namespace: aiops
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: ollamaverse-backend
@@ -15,22 +15,10 @@ spec:
     spec:
       containers:
         - name: ollamaverse-backend
-          image: 976193257685.dkr.ecr.ap-south-1.amazonaws.com/ollamaverse-backend:1.19
+          image: 976193257685.dkr.ecr.ap-south-1.amazonaws.com/ollamaverse-backend:3.3
           imagePullPolicy: IfNotPresent
           ports:
-            - containerPort: 5000
-          env:
-            - name: PORT
-              value: "5000"
-            - name: DATABASE_URL
-              value: "mongodb://mongouser:mongopass@mongodb-service:27017/mydatabase?authSource=admin"
-            - name: REDIS_URL
-              value: "redis://redis-service:6379"
-            - name: JWT_SECRET
-              valueFrom:
-                secretKeyRef:
-                  name: backend-secret
-                  key: jwt-secret
+            - containerPort: 8080
           resources:
             requests:
               cpu: "200m"
@@ -38,19 +26,19 @@ spec:
             limits:
               cpu: "500m"
               memory: "512Mi"
-          readinessProbe:
-            httpGet:
-              path: /health
-              port: 5000
-            initialDelaySeconds: 10
-            periodSeconds: 15
-            timeoutSeconds: 5
-            failureThreshold: 3
-          livenessProbe:
-            httpGet:
-              path: /health
-              port: 5000
-            initialDelaySeconds: 30
-            periodSeconds: 20
-            timeoutSeconds: 5
-            failureThreshold: 5
+          # readinessProbe:
+          #   httpGet:
+          #     path: /health
+          #     port: 5000
+          #   initialDelaySeconds: 10
+          #   periodSeconds: 15
+          #   timeoutSeconds: 5
+          #   failureThreshold: 3
+          # livenessProbe:
+          #   httpGet:
+          #     path: /health
+          #     port: 5000
+          #   initialDelaySeconds: 30
+          #   periodSeconds: 20
+          #   timeoutSeconds: 5
+          #   failureThreshold: 5
