--- a/K8S-Manifests/python/py-deployment.yaml
+++ b/K8S-Manifests/python/py-deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: ollamaverse-py-backend
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: ollamaverse-py-backend
@@ -17,24 +17,19 @@ spec:
     spec:
       containers:
         - name: ollamaverse-py-backend
-          image: 976193257685.dkr.ecr.ap-south-1.amazonaws.com/ollamaverse-py-backend:1.12
+          image: 976193257685.dkr.ecr.ap-south-1.amazonaws.com/ollamaverse-py-backend:3.4
           ports:
-            - containerPort: 5001
-          env:
-            - name: FLASK_ENV
-              value: "production"
-            - name: OLLAMA_HOST
-              value: "http://ollama-smollm2.aiops.svc.cluster.local:11434"
-              # 👆 or change to ollama-tinyllama if you want that model instead
-          readinessProbe:
-            httpGet:
-              path: /models
-              port: 5001
-            initialDelaySeconds: 15
-            periodSeconds: 10
-          livenessProbe:
-            httpGet:
-              path: /models
-              port: 5001
-            initialDelaySeconds: 30
-            periodSeconds: 20
+            - containerPort: 8000
+
+          # readinessProbe:
+          #   httpGet:
+          #     path: /models
+          #     port: 8000
+          #   initialDelaySeconds: 15
+          #   periodSeconds: 10
+          # livenessProbe:
+          #   httpGet:
+          #     path: /models
+          #     port: 8000
+          #   initialDelaySeconds: 30
+          #   periodSeconds: 20
