updated the backend code and it is working fine

--- a/ApplicationCode/backend/.env.example
+++ b/ApplicationCode/backend/.env.example
@@ -1,6 +1,6 @@
-DATABASE_URL="x"
+
 JWT_SECRET=mySuperSecretKey
 PORT=8080
 REDIS_URL=redis://redis-service:6379
 PYTHON_SERVICE=https://ollama.asifahmadkhan.com
-
+DATABASE_URL="mongodb+srv://ollamaverse:ollamaverse@cluster0.fisei.mongodb.net/ollamaverse"
