--- a/K8S-Manifests/backend/backend-deployment.yaml
+++ b/K8S-Manifests/backend/backend-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: ollamaverse-backend
-          image: 976193257685.dkr.ecr.ap-south-1.amazonaws.com/ollamaverse-backend:3.3
+          image: 976193257685.dkr.ecr.ap-south-1.amazonaws.com/ollamaverse-backend:3.7
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
@@ -26,19 +26,19 @@ spec:
             limits:
               cpu: "500m"
               memory: "512Mi"
-          # readinessProbe:
-          #   httpGet:
-          #     path: /health
-          #     port: 5000
-          #   initialDelaySeconds: 10
-          #   periodSeconds: 15
-          #   timeoutSeconds: 5
-          #   failureThreshold: 3
-          # livenessProbe:
-          #   httpGet:
-          #     path: /health
-          #     port: 5000
-          #   initialDelaySeconds: 30
-          #   periodSeconds: 20
-          #   timeoutSeconds: 5
-          #   failureThreshold: 5
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 15
+            timeoutSeconds: 5
+            failureThreshold: 3
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 30
+            periodSeconds: 20
+            timeoutSeconds: 5
+            failureThreshold: 5
