--- a/K8S-Manifests/frontend/frontend-service.yaml
+++ b/K8S-Manifests/frontend/frontend-service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ollamaverse-frontend-service
+  namespace: aiops
 spec:
   type: ClusterIP
   selector:
