--- a/K8S-Manifests/backend/backend-deployment.yaml
+++ b/K8S-Manifests/backend/backend-deployment.yaml
@@ -19,13 +19,13 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
-          resources:
-            requests:
-              cpu: "200m"
-              memory: "256Mi"
-            limits:
-              cpu: "500m"
-              memory: "512Mi"
+          # resources:
+          #   requests:
+          #     cpu: "200m"
+          #     memory: "256Mi"
+          #   limits:
+          #     cpu: "500m"
+          #     memory: "512Mi"
           readinessProbe:
             httpGet:
               path: /health
