--- a/K8S-Manifests/backend/redis-deployment.yaml
+++ b/K8S-Manifests/backend/redis-deployment.yaml
@@ -18,13 +18,13 @@ spec:
           image: redis:7-alpine
           ports:
             - containerPort: 6379
-          resources:
-            requests:
-              cpu: "100m"
-              memory: "128Mi"
-            limits:
-              cpu: "250m"
-              memory: "256Mi"
+          # resources:
+          #   requests:
+          #     cpu: "100m"
+          #     memory: "128Mi"
+          #   limits:
+          #     cpu: "250m"
+          #     memory: "256Mi"
           livenessProbe:
             tcpSocket:
               port: 6379
