added the log-viewer path in the main domain

--- a/K8S-Manifests/ingress.yaml
+++ b/K8S-Manifests/ingress.yaml
@@ -24,6 +24,14 @@ spec:
                 name: ollamaverse-frontend-service
                 port:
                   number: 80
+          - path: /load-test
+            pathType: Prefix
+            backend:
+              service:
+                name: loadtest-viewer
+                port:
+                  number: 80
+
     - host: api.asifahmadkhan.com
       http:
         paths:
