--- a/K8S-Manifests/tokenapi/tokenapi-deployment.yaml
+++ b/K8S-Manifests/tokenapi/tokenapi-deployment.yaml
@@ -19,10 +19,10 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 9000
-          resources:
-            requests:
-              cpu: "200m"
-              memory: "256Mi"
-            limits:
-              cpu: "500m"
-              memory: "512Mi"
+          # resources:
+          #   requests:
+          #     cpu: "200m"
+          #     memory: "256Mi"
+          #   limits:
+          #     cpu: "500m"
+          #     memory: "512Mi"
