--- a/K8S-Manifests/loadTest-viewer/deployment.yaml
+++ b/K8S-Manifests/loadTest-viewer/deployment.yaml
@@ -16,7 +16,7 @@ spec:
       serviceAccountName: loadtest-viewer-sa
       containers:
         - name: loadtest-viewer
-          image: 976193257685.dkr.ecr.ap-south-1.amazonaws.com/ollamaverse-loadtest-viewer:1.1
+          image: 976193257685.dkr.ecr.ap-south-1.amazonaws.com/ollamaverse-loadtest-viewer:1.2
           ports:
             - containerPort: 8080
           env:
@@ -24,6 +24,13 @@ spec:
               value: "ap-south-1"
             - name: S3_BUCKET
               value: "aiops-loadtest-reports"
+            - name: DATABASE_URL
+              value: "mongodb+srv://ollamaverse:ollamaverse@cluster0.fisei.mongodb.net/ollamaverse"
+            - name: REDIS_URL
+              value: "redis://redis-service:6379"
+            - name: PORT
+              value: "8080"
+
 ---
 apiVersion: v1
 kind: Service
